Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-23529

WorkerStats data race

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.0.0
    • master
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown
    • KV Spock Beta

    Description

      SeeĀ ThreadSanitizer failure:

      WARNING: ThreadSanitizer: data race (pid=21466)
        Write of size 8 at 0x7d080005c0f8 by thread T3 (mutexes: write M7158):
          #0 operator delete(void*) <null> (engine_testapp+0x00000046558b)
          #1 <null> <null> (libstdc++.so.6+0x0000000c1ac7)
          #2 ExecutorThread::run() /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/src/executorthread.cc:133 (ep.so+0x0000000e48a6)
          #3 launch_executor_thread(void*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/src/executorthread.cc:33 (ep.so+0x0000000e40c5)
          #4 CouchbaseThread::run() /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/platform/src/cb_pthreads.cc:58 (libplatform_so.so.0.1.0+0x000000007ec1)
          #5 platform_thread_wrap(void*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/platform/src/cb_pthreads.cc:71 (libplatform_so.so.0.1.0+0x0000000061c2)
       
        Previous read of size 1 at 0x7d080005c0fe by main thread (mutexes: write M43991, write M45212, write M5003):
          #0 memcpy <null> (engine_testapp+0x000000465ef0)
          #1 <null> <null> (libstdc++.so.6+0x0000000c06dd)
          #2 showJobLog(char const*, char const*, std::vector<TaskLogEntry, std::allocator<TaskLogEntry> > const&, void const*, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/src/statwriter.h:39 (ep.so+0x0000000dff4f)
          #3 ExecutorPool::doWorkerStat(EventuallyPersistentEngine*, void const*, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/src/executorpool.cc:877 (ep.so+0x0000000df7d7)
          #4 EventuallyPersistentEngine::getStats(void const*, char const*, int, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/src/ep_engine.cc:4395 (ep.so+0x0000000a8d87)
          #5 EvpGetStats(engine_interface*, void const*, char const*, int, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/src/ep_engine.cc:290 (ep.so+0x00000009779e)
          #6 std::_Function_handler<ENGINE_ERROR_CODE (), std::_Bind<ENGINE_ERROR_CODE (*(engine_interface*, void const*, char const*, int, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)))(engine_interface*, void const*, char const*, int, void (*)(char const*, unsigned short, char const*, unsigned int, void const*))> >::_M_invoke(std::_Any_data const&) /usr/bin/../lib/gcc/x86_64-linux-gnu/4.9/../../../../include/c++/4.9/functional:1263 (engine_testapp+0x0000004f8f42)
          #7 std::function<ENGINE_ERROR_CODE ()>::operator()() const /usr/bin/../lib/gcc/x86_64-linux-gnu/4.9/../../../../include/c++/4.9/functional:2439 (engine_testapp+0x0000004d0c17)
          #8 perf_stat_latency_core(engine_interface*, engine_interface_v1*, int, StatRuntime) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/tests/ep_perfsuite.cc:1259 (ep_perfsuite.so+0x000000020562)
          #9 perf_stat_latency(engine_interface*, engine_interface_v1*, char const*, StatRuntime, BackgroundWork, int) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/tests/ep_perfsuite.cc:1328 (ep_perfsuite.so+0x00000001bf4e)
          #10 perf_slow_stat_latency_100vb_sets_and_dcp(engine_interface*, engine_interface_v1*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/tests/ep_perfsuite.cc:1408 (ep_perfsuite.so+0x00000001b826)
          #11 execute_test(test, char const*, char const*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/memcached/programs/engine_testapp/engine_testapp.cc:1049 (engine_testapp+0x0000004cd7cd)
          #12 __libc_start_main /build/buildd/eglibc-2.15/csu/libc-start.c:226 (libc.so.6+0x00000002176c)
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              james.harrison James Harrison (Inactive)
              james.harrison James Harrison (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty